플레이어 체력바 구현
보스 총알에 피격시 플레이어 체력 감소를 반영한 체력바 구현

--- a/invasion/Assembly-CSharp.csproj
+++ b/invasion/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
      <Compile Include="Assets\Script\UI\HP_Zero.cs" />
      <Compile Include="Assets\Script\Player\PlayerController.cs" />
      <Compile Include="Assets\Script\Singletorn.cs" />
+     <Compile Include="Assets\Script\UI\PlayerHP.cs" />
      <None Include="Assets\Pixel Font - Tripfive\_README.txt" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>D:/선재/과제/게임엔진2/텀프/-2--/invasion/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
