타임어택 타이머 구현
TimeSpan 밀리세컨드 부분에서 인스턴스 사용해서 구현시 시간 표기가 입력받은 LimitTime의 두배로 뛰는 오류가 발생하여 밀리세컨드 구현은 현재 실패한 상태입니다. 오류 해결방안을 연구해보거나 시간상 불가능할경우 밀리세컨드 부분을 없애려 합니다..ㅠㅠ

--- a/invasion/Assembly-CSharp.csproj
+++ b/invasion/Assembly-CSharp.csproj
@@ -51,10 +51,12 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Script\UI\UIManager.cs" />
+     <Compile Include="Assets\Script\UI\PlayerHP.cs" />
      <Compile Include="Assets\GameManager.cs" />
      <Compile Include="Assets\Script\BulletState.cs" />
      <Compile Include="Assets\Script\PlayerFollowCamera.cs" />
      <Compile Include="Assets\Script\Player\PlayerStatus.cs" />
+     <Compile Include="Assets\Script\Timer.cs" />
      <Compile Include="Assets\Script\UI\scale_fix.cs" />
      <Compile Include="Assets\Script\Boss\BossStatus.cs" />
      <Compile Include="Assets\Script\Boss\BossController.cs" />
@@ -63,7 +65,6 @@
      <Compile Include="Assets\Script\UI\HP_Zero.cs" />
      <Compile Include="Assets\Script\Player\PlayerController.cs" />
      <Compile Include="Assets\Script\Singletorn.cs" />
-     <Compile Include="Assets\Script\UI\PlayerHP.cs" />
      <None Include="Assets\Pixel Font - Tripfive\_README.txt" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>D:/선재/과제/게임엔진2/텀프/-2--/invasion/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
