무적 구현(쿨타임 미구현)
스페이스바 입력시 무적 상태(피탄당해도 hp가 감소하지 않음) 구현, 쿨타임은 아직 미구현입니다.

--- a/invasion/Assembly-CSharp.csproj
+++ b/invasion/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Script\PlayerFollowCamera.cs" />
      <Compile Include="Assets\Script\Player\PlayerStatus.cs" />
      <Compile Include="Assets\Script\Timer.cs" />
+     <Compile Include="Assets\Script\CameraManager.cs" />
      <Compile Include="Assets\Script\UI\scale_fix.cs" />
      <Compile Include="Assets\Script\Boss\BossStatus.cs" />
      <Compile Include="Assets\Script\Boss\BossController.cs" />
@@ -66,8 +67,7 @@
      <Compile Include="Assets\Script\Player\PlayerController.cs" />
      <Compile Include="Assets\Script\Singletorn.cs" />
      <Compile Include="Assets\Script\TimerTextUI.cs" />
-     <Compile Include="Assets\Script\ButtonActive.cs" />
-     <Compile Include="Assets\Script\CameraManager.cs" />
+     <Compile Include="Assets\Script\CoolTimeUI.cs" />
      <None Include="Assets\Pixel Font - Tripfive\_README.txt" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>D:/선재/과제/게임엔진2/Term/-2--/invasion/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
