--- a/invasion/Assembly-CSharp.csproj
+++ b/invasion/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Script\ShipState.cs" />
      <Compile Include="Assets\Script\UI\PlayerHP.cs" />
      <Compile Include="Assets\GameManager.cs" />
+     <Compile Include="Assets\Script\UI\NoDamageTimeUI.cs" />
      <Compile Include="Assets\Script\BulletState.cs" />
      <Compile Include="Assets\Script\PlayerFollowCamera.cs" />
      <Compile Include="Assets\Script\Player\PlayerStatus.cs" />
