스카이박스 회전+변경
스카이박스 변경하고 자동으로 회전하도록 스크립트 추가하였습니다!

--- a/invasion/Assembly-CSharp.csproj
+++ b/invasion/Assembly-CSharp.csproj
@@ -72,6 +72,7 @@
      <Compile Include="Assets\Script\Player\PlayerController.cs" />
      <Compile Include="Assets\Script\Singletorn.cs" />
      <Compile Include="Assets\Script\TimerTextUI.cs" />
+     <Compile Include="Assets\Script\MoveSky.cs" />
      <None Include="Assets\Pixel Font - Tripfive\_README.txt" />
      <None Include="Assets\SkySerie Freebie\Hdri setup.txt" />
  <Reference Include="Unity.Timeline.Editor">
